--- a/app.json
+++ b/app.json
@@ -4,7 +4,9 @@
     "slug": "SolarSpec",
     "version": "1.0.0",
     "orientation": "portrait",
+    "userInterfaceStyle": "light",
     "icon": "./assets/icon.png",
+  
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -20,8 +22,9 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#1B142F"
       },
+
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyBqmj28fdf-8ImgLjZW0rKMp4anOeqPgYQ"
