--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
+    "chart.js": "^3.5.1",
+    "dotenv": "^10.0.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "^9.2.1",
@@ -19,10 +22,24 @@
     "react-dom": "16.13.1",
     "react-expo-snack": "^1.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-chartjs": "^1.0.3",
     "react-native-dialog": "^9.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "^0.29.3",
-    "react-native-web": "~0.13.12"
+    "react-native-maps": "0.28.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "~0.13.12",
+    "sync-storage": "^0.4.2",
+    "victory": "^36.0.1",
+    "victory-native": "^35.5.5"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!victory|react-native-svg|react-native)"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
