--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "chart.js": "^3.5.1",
@@ -18,11 +19,15 @@
     "expo-font": "^9.2.1",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-expo-snack": "^1.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-chartjs": "^1.0.3",
+    "react-native-date-picker": "^4.0.0",
+    "react-native-daterange-picker": "^1.5.1",
+    "react-native-dates": "^2.0.4",
     "react-native-dialog": "^9.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.28.0",
