--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-dialog": "^9.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.28.0",
+    "react-native-placesearch": "^3.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "sync-storage": "^0.4.2",
