--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#1B142F"
+        "backgroundColor": "#4827A4"
       },
 
       "config": {
